--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "alpinejs": "^3.9.6"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
